--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="https://twitter.com/vsenindu"><img src="assets/images/twitter.png"></a>
                 <a href="https://t.me/viharasenindu"><img src="assets/images/telegram.png"></a>
             </div>
-            <a href="#" class="btn wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.8s">Message Me</a>
+            <a href="t.me/ViharaSenindu" class="btn wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.8s">Message Me</a>
         </div>
     </div>
     <script src="assets/js/vanilla-tilt.js"></script>
