--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <div class="container">
         <div class="card wow fadeInUp" data-tilt>
             <img src="assets/images/profile.jpg" class="wow fadeInUp" data-wow-duration="0.4s" data-wow-delay="0.2s">
-            <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Vihara Seninu</h2>
+            <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Vihara Senindu</h2>
             <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Vihara Senindu, Under Maintane.</p>
             <div class="links wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.8s">
-               <a href="https://facebook.com"><img src="assets/images/facebook.png"></a>
+               <a href="https://facebook.com/viharasenindu"><img src="assets/images/facebook.png"></a>
                 <a href="https://twitter.com/vsenindu"><img src="assets/images/twitter.png"></a>
                 <a href="https://t.me/viharasenindu"><img src="assets/images/telegram.png"></a>
+                <a href="https://www.instagram.com/vihara_senindu/"><img src="assets/images/instagram.png"></a>
             </div>
             <a href="https://t.me/ViharaSenindu" class="btn wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.8s">Message Me</a>
         </div>
