--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <a href="https://twitter.com/vsenindu"><img src="assets/images/twitter.png"></a>
                 <a href="https://t.me/viharasenindu"><img src="assets/images/telegram.png"></a>
                 <a href="https://www.instagram.com/vihara_senindu/"><img src="assets/images/instagram.png"></a>
+                <a href="https://www.github.com/ViharaSenindu"><img src="assets/images/github.png"></a>
+
             </div>
             <a href="https://t.me/ViharaSenindu" class="btn wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.8s">Message Me</a>
         </div>
