--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vihara Senindu's </title>
     <meta name="description" content="Vihara Senindu, Under Maintane.">
+    <link rel="shortcut icon" href="assets/images/profile.jpg"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="assets/css/animate.css">
 
